--- a/README
+++ b/README
@@ -14,11 +14,12 @@ octave 3.2.4
 
 xtightvncviewer (1.3.9-6.2)
 
+git 1.7.5.4
+
 --------------------
 TODO :
 
 svn
-git
 SystemC : http://archive.pfb.no/2010/10/13/systemc-ubuntu-1010/
           http://www.accellera.org/downloads/standards/systemc
 
