--- a/SystemC/README
+++ b/SystemC/README
@@ -1,4 +1,7 @@
 
+SystemC : http://archive.pfb.no/2010/10/13/systemc-ubuntu-1010/
+          http://www.accellera.org/downloads/standards/systemc
+
 http://www.deepchip.com/items/0500-02.html
 http://www.deepchip.com/gadfly/gad060211.html
 
